<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/bg_header">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poly_regular"
        android:paddingTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/purple"
        android:textSize="35sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_artikel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"/>
        
        
        
        <LinearLayout
            android:id="@+id/ll_slider_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poly_regular"
                android:text="@string/txt_judul_fitur"
                android:textColor="@color/peach"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <!--            Sunnah Qouliyah-->
            <LinearLayout
                android:id="@+id/ll_dzikir_doa_shalat"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="21dp"
                android:layout_marginStart="20dp"
                android:background="@color/peach"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="84dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="-1dp"
                    android:contentDescription="@string/content_txt_icon_qauliyah_shalat"
                    android:src="@drawable/ic_doa" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poly_regular"
                    android:textColor="@color/purple"
                    android:text="@string/txt_sunnah_qauliyah"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </LinearLayout>

<!--            dzikir setiap saat-->
            <LinearLayout
                android:id="@+id/ll_dzikir_setiap_saat"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="-242dp"
                android:layout_marginBottom="21dp"
                android:background="@color/peach"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="40dp"
                android:paddingRight="40dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/content_txt_icon_dzikir_setiap_saat"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poly_regular"
                    android:text="@string/txt_dzikir_setiap_saat"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp"/>


            </LinearLayout>

<!--dzikir dan doa harian-->
            <LinearLayout
                android:id="@+id/ll_dzikir_doa_harian"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginBottom="21dp"
                android:layout_marginStart="20dp"
                android:background="@color/peach"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="84dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="-1dp"
                    android:contentDescription="@string/content_txt_icon_dzikir_doa_harian"
                    android:src="@drawable/ic_dzikir" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poly_regular"
                    android:textColor="@color/purple"
                    android:text="@string/txt_dzikir_doa_harian"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </LinearLayout>

<!--            dzikir pagi petang-->
            <LinearLayout
                android:id="@+id/ll_dzikir_pagi_petang"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="-242dp"
                android:layout_marginBottom="21dp"
                android:background="@color/peach"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="40dp"
                android:paddingRight="40dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"
                    android:src="@drawable/ic_pagi_petang" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poly_regular"
                    android:text="@string/txt_dzikir_pagi_petang"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp" />


            </LinearLayout>






        </LinearLayout>





    </LinearLayout>



    </androidx.core.widget.NestedScrollView>







</LinearLayout>