<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/purple"
    android:padding="16dp"
    tools:context=".ui.DzikirPagiDanPetangActivity">


    <TextView
        android:id="@+id/tv_dzikir_pagi_petang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:fontFamily="@font/poly_regular"
        android:gravity="bottom"
        android:padding="16dp"
        android:text="@string/txt_dzikir_pagi_petang"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikir_pagi"
        android:layout_width="176dp"
        android:layout_height="233dp"
        app:cardBackgroundColor="@color/peach"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_dzikir_petang"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_dzikir_pagi_petang"
        app:layout_constraintVertical_bias="0.376">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_morning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:fontFamily="@font/poly_regular"
            android:text="@string/txt_dzikir_pagi"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="23sp" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikir_petang"
        android:layout_width="176dp"
        android:layout_height="233dp"
        app:cardBackgroundColor="@color/peach"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="@id/cv_dzikir_pagi"
        app:layout_constraintTop_toTopOf="@id/tv_dzikir_pagi_petang"
        app:layout_constraintVertical_bias="0.376">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_evening" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:fontFamily="@font/poly_regular"
            android:text="@string/txt_dzikir_petang"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="23sp" />


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

